--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-  <h1>Rest Controller: EmployeeController</h1>
+  <h1>SpringBootApp Rest Example</h1>
   <h3>Default login user: user</h3>
   <h3>Default login password: printed in console</h3>
   <h3>SpringBootApp context-root: /springBootRest</h3>
+  <h3>Logon rest mapping: /logon</h3>
+  <h3>CompanyController rest mapping: /companies</h3>
   <h3>EmployeeController rest mapping: /employees</h3>
   </body>
 </html>
